visibility fix

--- a/test.css
+++ b/test.css
@@ -102,7 +102,7 @@ button {
     top: 0;
     padding: 5% 10% 5% 10%;
     animation: combo_effect 1s 0.05s infinite;
-    overflow: visible;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0);
     box-shadow: inset rgba(0, 0, 0, 0.719) 0 0 25px 0px;
     user-select: none;
@@ -373,7 +373,7 @@ button {
     bottom: 0;
     top: 0;
     user-select: none;
-    overflow: visible;
+    overflow: hidden;
 }
 
 @keyframes obstacle1movehard {
